@@ -1,10 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
 <script>
-function checkSubmit(e) {
-	if(e && e.keyCode == 13) {
-		document.forms[0].submit();
-	}
+window.onload = doStuff;
+
+function doStuff() {
+    var form = document.getElementById("demoForm");
+    form.addEventListener('keypress', (event) => {
+        if (event.key === 'Enter') {
+            event.preventDefault(); // Prevent default form submission
+            form.submit(); // Manually submit the form
+        }
+    });
 }
 </script>
 <script>
