@@ -1,10 +1,16 @@
 {% extends "layout.html" %}
 {% block body %}
 <script>
-function checkSubmit(e) {
-	if(e && e.keyCode == 13) {
-		document.forms[0].submit();
-	}
+window.onload = doStuff;
+
+function doStuff() {
+    var form = document.getElementById("demoForm");
+    form.addEventListener('keypress', (event) => {
+        if (event.key === 'Enter') {
+            event.preventDefault(); // Prevent default form submission
+            form.submit(); // Manually submit the form
+        }
+    });
 }
 </script>
 <script>
@@ -19,8 +25,7 @@ $(document).ready(function() {
 });
 </script>
 <form actions="{{ url_for('spell_search') }}" method="post" class="add-entry" id="demoForm">
-    Spell Name (partial allowed): <textarea rows="1" class="nameentry" name="spell_name"
-                                           onKeyPress="return checkSubmit(event)"></textarea><br><br>
+    Spell Name (partial allowed): <textarea rows="1" class="nameentry" name="spell_name"></textarea><br><br>
 <input type="submit" value="Search">
 </form>
 {% endblock %}
